# axion-fopt

./: .gitignore  LICENSE  README.md
xi_model/: README.md  plot_low_hstar_xi_vs_betaH.py  pyproject.toml
xi_model/data/: effective_ftilde_by_vw_summary.json  fanh_fitready_H1_paper_ansatz_summary.json  fit_points.csv  gstar_lookup.json  local_summary.json  per_slice_summary.csv  summary.json  support_ranges.json
xi_model/data/geometry_bank/: BM_geometry_RD_kappa_0.010_vw0.3_oneloop.json  BM_geometry_RD_kappa_0.010_vw0.5_oneloop.json  BM_geometry_RD_kappa_0.010_vw0.7_oneloop.json  BM_geometry_RD_kappa_0.010_vw0.9_oneloop.json  BM_geometry_RD_kappa_0.010_vw1.0_oneloop.json  BM_geometry_RD_kappa_0.020_vw0.3_oneloop.json  BM_geometry_RD_kappa_0.020_vw0.5_oneloop.json  BM_geometry_RD_kappa_0.020_vw0.7_oneloop.json  BM_geometry_RD_kappa_0.020_vw0.9_oneloop.json  BM_geometry_RD_kappa_0.020_vw1.0_oneloop.json  BM_geometry_RD_kappa_0.030_vw0.3_oneloop.json  BM_geometry_RD_kappa_0.030_vw0.5_oneloop.json  BM_geometry_RD_kappa_0.030_vw0.7_oneloop.json  BM_geometry_RD_kappa_0.030_vw0.9_oneloop.json  BM_geometry_RD_kappa_0.030_vw1.0_oneloop.json  BM_geometry_RD_kappa_0.040_vw0.3_oneloop.json  BM_geometry_RD_kappa_0.040_vw0.5_oneloop.json  BM_geometry_RD_kappa_0.040_vw0.7_oneloop.json  BM_geometry_RD_kappa_0.040_vw0.9_oneloop.json  BM_geometry_RD_kappa_0.040_vw1.0_oneloop.json  BM_geometry_RD_kappa_0.050_vw0.3_oneloop.json  (+209 more)
xi_model/examples/: example_usage.py
xi_model/tests/: test_smoke.py
xi_model/xi_model/: __init__.py  _geom_compact.py  _percolation.py  api.py
(+41 files in other folders)
